--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -20,7 +20,7 @@
       a tree structure.}
   \item[extension]{Code using an \emph{API} in order to extend the functionality
       of an existing project.}
-  \item[GUI]{Graphical User Interface}
+  \item[GUI]{Graphical User Interface.}
   \item[HSR]{The Hochschule für Technik (University of Applied Sciences) in
       Rapperswil, Switzerland.}
   \item[HTML]{HyperText Markup Language, the language used to structure web
@@ -37,13 +37,13 @@
       technologies, such as Adobe Flash.}
   \item[Python]{The programming language used to write qutebrowser.}
   \item[PyQt]{A software library which allows to use \emph{Qt} from \emph{Python}.}
-  \item[Qt]{The \emph{GUI} library used by qutebrowser}
+  \item[Qt]{The \emph{GUI} library used by qutebrowser.}
   \item[QtWebEngine]{The \emph{backend} used by default in qutebrowser, based on
       the Chromium project (like the Chrome web browser).}
   \item[QtWebKit]{One of two possible \emph{backends} qutebrowser can use.
       QtWebKit is the older backend, which is not used by default anymore, but is
       still supported.}
-  \item[SA]{Studienarbeit (Student research project)}
+  \item[SA]{Studienarbeit (student research project).}
   \item[slot] A slot is the method or function connected to a \emph{signal} in
     \emph{Qt}. See section \ref{sec:langfeatures}.
   \item[signal] A signal is a \emph{Qt} feature which lets objects communicate
