--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -34,7 +34,7 @@
 \counterwithout{figure}{chapter}
 
 \usepackage{csquotes}
-\usepackage[backend=biber,style=authoryear-ibid,autocite=inline]{biblatex}
+\usepackage[backend=biber,style=authoryear,autocite=inline]{biblatex}
 \addbibresource{bibliography.bib}
 \setlength\bibitemsep{0.7\baselineskip}
 
