--- a/doc/projmanagement.tex
+++ b/doc/projmanagement.tex
@@ -10,7 +10,7 @@
 
 Since this project is done without any external industry partner, there is no
 immediate need for fixed releases or prototypes during the SA. However, the
-following releases were planned:
+following releases are planned:
 
 \begin{itemize}
   \item A v1.5.0 feature release as soon as PyQt 5.11.3 is released upstream,
@@ -18,7 +18,7 @@ following releases were planned:
     enough bugs.
   \item v1.6.0 after the work on refactoring qutebrowser's core into extensions
     is completed, in order to get the changes out to users as soon as possible.
-    v1.6.x patch releases as needed (probably after the SA is finished).
+    Afterwards, v1.6.x patch releases as needed (likely after the SA is finished).
   \item In the future, after the extension API is open for third-party
     extensions, a v2.0.0 release with some other big changes (like dropping support
     for the older QtWebKit backend).
@@ -64,7 +64,7 @@ Because of previous experience as part of HSR's ``Engineering Project'', the
 ``Scrum+'' process model will be used, i.e., an agile Scrum process with an
 additional ``End of Elaboration'' milestone. At the beginning of the SA, there was a phase with the goal of merging existing
 third-party contributions (pull requests) into qutebrowser, so that the changes
-required for extensions does not conflict with existing work. Thus, an additional
+required for extensions do not conflict with existing work. Thus, an additional
 \emph{preparation} phase has been introduced, resulting in the following phases:
 Inception, Preparation, Elaboration, Construction, Transition.
 
@@ -72,7 +72,7 @@ Inception, Preparation, Elaboration, Construction, Transition.
 \section{Project Schedule}
 \label{schedule}
 
-8 ECTS credits are awarded for the SA-course. Since one ECTS point is equivalent
+8 ECTS credits are awarded for the SA course. Since one ECTS point is equivalent
 to a workload of 25--30 hours \autocite{ects} and this SA is written by a single
 author, this amounts to 200--240 hours of work. The semester consists of 14
 weeks, thus, an average workload of 14--17 hours per week is expected. This time
@@ -260,7 +260,7 @@ announcement\footnote{\url{https://lists.schokokeks.org/pipermail/qutebrowser-an
 contributions. However, a similar announcement was sent out during past exam
 seasons, with mixed results -- many contributors continue to submit changes
 regardless. Initially, there is a phase focused on merging existing
-contributions (see the project schedule in section \ref{schedule}). Afterwards,
+contributions (see the project schedule in figure \ref{img:schedule}). Afterwards,
 contributions are dealt with on a best effort basis, being ignored if they
 are non-trivial.
 
@@ -269,7 +269,7 @@ Additionally, this SA is written by a single author. Thus, sickness or other
 obstructions have a bigger than usual impact. This is counteracted by trying to
 keep the scope of the SA clear, but flexible. Additionally, buffer time is
 added after the preparation and construction phases in the project schedule
-(section \ref{schedule}).
+(see figure \ref{img:schedule}).
 
 If some preparatory work is not fully finished, it is possible that upcoming
 changes cause incompatible changes in the extension API. However, this SA
