--- a/doc/evaluation.tex
+++ b/doc/evaluation.tex
@@ -21,7 +21,7 @@ The API to get the selected text from a web page is an ideal example: The most
 straightforward API would be a \py{def selection() -> str} method. However,
 JavaScript execution is needed to get the selection, which is only available
 from Qt as a callback-based interface. Thus, the extension API will need to look
-like \py{def selection(cb: Callable[[str], None])} \\ \py{-> None} -- in other words,
+like \py{def selection(cb: Callable[[str], None]) -> None} -- in other words,
 the \py{selection} method will take a callback function, which then gets called
 with the selected text.
 
@@ -39,7 +39,7 @@ taken so the extension API can also satisfy these use cases in the future.
 
 \item[Other extension APIs] There is a general consensus from browser vendors
 around the WebExtension API. Unfortunately, that API is unsuitable for
-qutebrowser, for reasons explained in chapter \ref{unsuitable}. It can still
+qutebrowser, for reasons explained in section \ref{webextensions}. It can still
 serve as a source for inspiration.
 
 \item[Python and Qt] While some higher-level architectural decisions are
@@ -49,16 +49,14 @@ programming language and the idioms used therein. Since qutebrowser's extension
 API is used from Python, it should aim to be ``Pythonic'' (i.e., adhering to
 Python idioms\footnote{\url{https://blog.startifact.com/posts/older/what-is-pythonic.html}})
 and also use features made available by Qt. As an example, a Pythonic API might
-favor Python
-decorators\footnote{\url{https://docs.python.org/3/glossary.html\#term-decorator}}
-over inheritance to set up extension hooks; or a Qt API might prefer Qt's
-signals/slots
-facility\footnote{\url{https://doc.qt.io/qt-5/signalsandslots.html}} over a
-callback-based API.
+favor Python decorators over inheritance to set up extension hooks; or a Qt API
+might prefer Qt's signals/slots facility callback-based API.
 \end{description}
 
 In addition to the mentioned external forces, it is helpful to have a set of
-self-imposed design guidelines in mind when designing an API. For this project,
+self-imposed design guidelines in mind when designing an API.
+
+For this project,
 it was decided to adopt the \emph{``Characteristics of good APIs''} listed in
 Jasmin~Blanchette's \emph{Little Manual of API Design}
 \autocite[7ff]{api-design}:
